data/all_generated_tests/raw_wast_tests/call_EdgeCaseFailuresinbr_table_3780.wast
;; 9. **Test Description**: Insert a `br_table` in a loop, with its index dependent on loop counters. Ensure out-of-bounds access is correctly trapped.    - **Specific Constraint**: Loop-driven boundary condition checks for `br_table` indices.    - **Relation to `call`**: Consistency in error handling when `call` indices are influenced by loop counters.

(assert_invalid
  (module
    (func $type-br_table-in-loop
      (loop $loop
        (block 
          (br_table 0 (i32.add (i32.const -1) (call 0)))
        )
        (br $loop)
      )
    )
    (func (result i32))
  )
  "type mismatch"
)